--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,9 +22,13 @@ h1 {
   margin-bottom: 2rem;
 }
 
+li {
+  margin-top: 5px;
+}
+
 .box {
   border: 3px solid black;
-  width: 25%;
+  width: 30%;
   height: 20rem;
   padding: 1rem;
   margin: 2%;
@@ -141,4 +145,8 @@ h1 {
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: center;
+}
+
+#high-score {
+  width: 100%;
 }
